--- a/main.css
+++ b/main.css
@@ -216,6 +216,12 @@ p {
   section {
     font-size:2em;
   }
+
+  p {
+    margin-left: 0.8em;
+    font-size: 3em;
+  }
+
   .banner {
     flex-direction:column
   }
