--- a/main.css
+++ b/main.css
@@ -228,13 +228,13 @@ p {
   }
 
   .banner {
-    flex-direction:column
+    /* flex-direction:column */
   }
   .banner3d-3, .banner3d-4 {
     width:50%
   }
   .image, .image2 {
-	  width:100%;
+	  width:50%;
 	  height:300px;
   }
 }
