--- a/index.css
+++ b/index.css
@@ -224,9 +224,9 @@ body {
 .btn_one {
     font-size:18px;
     font-family: 'Josefin Sans', sans-serif;
-    color:#fff;
+    color:#0000ff;
     background:transparent;
-    border:3px solid #fff;
+    border:3px solid #0000ff;
     padding:8px 40px;
     border-radius:80px;
     font-weight:bold;
@@ -259,12 +259,12 @@ body {
     margin:20px 1%;
     background:transparent;
     border:0px;
-    border-bottom:3px solid rgba(255,255,255,0.5);
+    border-bottom:3px solid #0000ff;
     padding:8px 10px;
     font-family: 'Poppins', sans-serif;
     font-size:18px;
     transition:0.4s ease-in-out;
-    color:#fff;
+    color:#0000ff;
     font-weight:bold;
 }
 .container form textarea {
@@ -272,26 +272,26 @@ body {
     margin:20px 1%;
     padding:8px 10px;
     border:0px;
-    border-bottom:3px solid rgba(255,255,255,0.5);
+    border-bottom:3px solid #0000ff;
     padding:8px 10px;
     font-family: 'Poppins', sans-serif;
     font-size:18px;
     background:transparent;
     resize:none;
     transition:0.4s ease-in-out;
-    color:#fff;
+    color:#0000ff;
     font-weight:bold;
 }
 .container form input:focus {
     outline:none;
-    border-bottom:3px solid rgba(255, 255, 255,1);
+    border-bottom:3px solid #0000ff;
 }
 .container form textarea:focus {
     outline:none;
-    border-bottom:3px solid rgba(255, 255, 255,1);
+    border-bottom:3px solid #0000ff;
 }
 ::placeholder {
-    color:#fff;
+    color:#0000ff;
 }
 #footer {
     color:#fff;
@@ -371,5 +371,11 @@ body {
     .container section {
       display: block;
         margin:8vh 0px;
+        width: 100%;
+    }
+    #middle h1 {
+        color:#0000ff;
+        font-size:40px;
+        text-decoration:underline;
     }
 }
