--- a/index.css
+++ b/index.css
@@ -408,4 +408,8 @@ body {
         font-size:40px;
         text-decoration:underline;
     }
+    .gallery {
+      height: 50vh;
+      width: 90vw;
+    }
 }
