--- a/index.css
+++ b/index.css
@@ -180,11 +180,20 @@ body {
     overflow-y:auto;
     display:none;
 }
-.container div {
-    font-size:25px;
-    margin:20px 0px;
+
+.closeButton {
+    font-size:50px !important;
     transition:0.4s ease-in-out;
 }
+
+.container div {
+    font-size:1em;
+    /* margin:20px 0px; */
+    transition:0.4s ease-in-out;
+}
+
+
+
 .container div:hover {
     cursor:pointer;
 }
@@ -247,6 +256,7 @@ body {
     text-decoration:underline;
 }
 .container p {
+  line-height: 1.2em;
     font-size:21px;
     color:black;
 }
