--- a/timeline.css
+++ b/timeline.css
@@ -114,9 +114,9 @@
   top: 50%;
   height: 0;
   width: 0;
-  margin-top: -8px;
+  margin-top: -7px;
   border: solid transparent;
-  border-left-color: rgb(248,248,248);
+  border-left-color: #fab400;
   border-width: 8px;
   pointer-events: none;
 }
@@ -128,9 +128,9 @@
   top: 50%;
   height: 0;
   width: 0;
-  margin-top: -8px;
+  margin-top: -7px;
   border: solid transparent;
-  border-right-color: rgb(248,248,248);
+  border-right-color: #fab400;
   border-width: 8px;
   pointer-events: none;
 }
@@ -196,7 +196,7 @@
 }
 
 .flag {
-	background: rgb(255,255,255);
+	/* background: rgb(255,255,255); */
 	z-index: 15;
 }
 
@@ -221,12 +221,12 @@
 	content: "";
 	position: absolute;
 	left: 50%;
-	top: -8px;
+	top: -7px;
 	height: 0;
 	width: 0;
 	margin-left: -8px;
 	border: solid transparent;
-	border-bottom-color: rgb(255,255,255);
+	border-bottom-color: #fab400;
 	border-width: 8px;
 	pointer-events: none;
 }
