--- a/index.css
+++ b/index.css
@@ -300,11 +300,11 @@ body {
     padding:8px 60px;
 }
 .container form input {
-    width:46%;
+    width:96%;
     margin:20px 1%;
     background:transparent;
     border:0px;
-    border-bottom:3px solid #ffbb00;
+    border:3px solid #ffbb00;
     padding:8px 10px;
     font-family: 'Poppins', sans-serif;
     font-size:18px;
@@ -317,7 +317,7 @@ body {
     margin:20px 1%;
     padding:8px 10px;
     border:0px;
-    border-bottom:3px solid #ffbb00;
+    border:3px solid #ffbb00;
     padding:8px 10px;
     font-family: 'Poppins', sans-serif;
     font-size:18px;
