--- a/index.css
+++ b/index.css
@@ -11,6 +11,12 @@ body {
     overflow:hidden;
     font-family: 'Josefin Sans';
 }
+
+html {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 #loading {
     width: 100vw;
     height: 100vh;
@@ -65,6 +71,7 @@ body {
     font-size:19px;
     color:#fff;
     text-decoration:underline;
+    text-decoration-thickness: 6px;
 }
 #middle {
     width:100vw;
@@ -83,6 +90,9 @@ body {
     color:#ffbb00;
     font-size:70px;
     text-decoration:underline;
+    text-decoration-thickness: 6px;
+    font-weight: 700;
+
 }
 #about {
     width:10vw;
@@ -254,6 +264,7 @@ body {
 .container h1 {
     font-size:60px;
     text-decoration:underline;
+    text-decoration-thickness: 6px;
 }
 .container p {
   line-height: 1.2em;
@@ -425,6 +436,7 @@ body {
         color:#ffbb00;
         font-size:40px;
         text-decoration:underline;
+        text-decoration-thickness: 6px;
     }
     .gallery {
       height: 50vh;
